# 4C

./: .clang-tidy  .gitignore  .mailmap  .pre-commit-config.yaml  .typos.toml  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  VERSION
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  release.md
.github/workflows/: buildtest.yml  checkcode.yml  coverage.yml  deploy.yml  docker.yml  docker_dealii.yml  docker_prebuilt_4c.yml  documentation.yml  nightly_tests.yml  trilinos-develop.yml
.gitlab/: CODEOWNERS
apps/: CMakeLists.txt
apps/create_rtdfiles/: 4C_create_rtdfiles_utils.cpp  4C_create_rtdfiles_utils.hpp  4C_create_rtdfiles_wrapper.cpp  CMakeLists.txt
apps/global_full/: 4C_global_full_cal_control.cpp  4C_global_full_control.cpp  4C_global_full_entrypoint_switch.cpp  4C_global_full_init_control.cpp  4C_global_full_inp_control.cpp  4C_global_full_io.cpp  4C_global_full_io.hpp  4C_global_full_main.cpp  CMakeLists.txt
apps/post_monitor/: 4C_post_monitor.cpp  4C_post_monitor.hpp
apps/post_processor/: 4C_post_processor.cpp  4C_post_processor_single_field_writers.cpp  4C_post_processor_single_field_writers.hpp  4C_post_processor_structure_stress.cpp  4C_post_processor_thermo_heatflux.cpp
apps/pre_exodus/: 4C_pre_exodus.cpp  4C_pre_exodus_readbc.cpp  4C_pre_exodus_readbc.hpp  4C_pre_exodus_reader.cpp  4C_pre_exodus_reader.hpp  4C_pre_exodus_validate.cpp  4C_pre_exodus_validate.hpp  4C_pre_exodus_writedat.cpp  4C_pre_exodus_writedat.hpp  CMakeLists.txt
cmake/: setup_global_options.cmake  setup_install.cmake  setup_tests.cmake
cmake/configure/: configure_ArborX.cmake  configure_Backtrace.cmake  configure_Boost.cmake  configure_CLN.cmake  configure_FFTW.cmake  configure_HDF5.cmake  configure_MIRCO.cmake  configure_MPI.cmake  configure_Qhull.cmake  configure_Trilinos.cmake  configure_ZLIB.cmake  configure_deal.II.cmake  configure_magic_enum.cmake  configure_ryml.cmake
cmake/functions/: four_c_add_dependency.cmake  four_c_auto_define_benchmark_tests.cmake  four_c_auto_define_module.cmake  four_c_auto_define_tests.cmake  four_c_configure_dependency.cmake  four_c_process_global_option.cmake  four_c_testing_functions.cmake
cmake/python/: requirements.txt  set_up_python.cmake
cmake/templates/: 4CConfig.cmake.in  4CSettings.cmake.in  4CTargets.cmake.in  ZLIB.cmake.in  deal.II.cmake.in  magic_enum.cmake.in  ryml.cmake.in
dependencies/dealii/: install.sh
dependencies/supported_version/: Trilinos.txt  deal.II.txt
doc/: CMakeLists.txt  README.md
doc/documentation/: 4Ccommunity.rst  4Csimulation.rst  CMakeLists.txt  community_roles.rst  conf.py.in  contact.rst  developer_cmake.rst  doxygen.rst  elements.rst  installation.rst  petra_object_model.rst  surface_int.rst  tut_fluid_preexo.rst  tut_introduction.rst
doc/documentation/python/: include_yaml.py  plot.py
doc/documentation/scripts/: extract_cmake_variables.sh
doc/documentation/src/: debugging_profiling.rst  developer_cluster.rst  developer_cmake.rst  howto_document.rst  index.rst  installation.rst  linear_solvers.rst  preprocessing.rst  struct_dynamics.rst  tut_battery.rst  tut_fluid_preexo.rst  tut_fsi_preexo.rst  tut_fsi_preexo_2d.rst  tut_solid_preexo.rst  tutorial_contact_3d.md
doc/documentation/src/_static/: html_extensions.css
doc/documentation/src/analysis_guide/: 4Csimulation.rst  analysisguide.rst  boundaryconditions.rst  contact.rst  linear_solvers.rst  preprocessing.rst  problemtypes.rst  struct_dynamics.rst
doc/documentation/src/analysis_guide_templates/: 4Csimulation.rst  analysisguide.rst  boundaryconditions.rst.j2  contact.rst.j2  elements.rst  elementsale.rst  elementsartery.rst  elementsfluid.rst  elementslubrication.rst  elementsreduceddairways.rst  elementsstructure.rst  elementsthermo.rst  elementstransport.rst  functions.rst.j2  geometrydefinition.rst.j2  inputfile.rst.j2  linear_solvers.rst  materials.rst.j2  postprocessing.rst  preprocessing.rst  problemtypes.rst  struct_dynamics.rst.j2  workflow.rst
doc/documentation/src/appendix/: howto_document.rst
doc/documentation/src/developer_guide/: 4Ctesting.rst  codingguidelines.rst  debugging_profiling.rst  developer_cmake.rst  developer_dirstructure.rst  developer_release.rst  developmentguide.rst  doxygen.rst  testing.rst
doc/documentation/src/input_parameter_reference/: elementreference.rst  parameterreference.rst
doc/documentation/src/installation/: installation.rst
doc/documentation/src/tools/: tools.rst
doc/documentation/src/tutorial_templates/: tut_battery.rst.j2  tut_fluid_preexo.rst.j2  tut_fsi_preexo.rst.j2  tut_fsi_preexo_2d.rst.j2  tut_solid.rst.j2  tutorial_battery.md.j2  tutorial_contact_3d.md.j2  tutorial_fluid.rst.j2  tutorial_fsi_2d.rst.j2  tutorial_fsi_3d.rst.j2  tutorial_introduction.rst  tutorial_introduction.rst.j2  tutorial_solid.rst.j2  tutorials.rst
doc/documentation/src/tutorials/: tut_solid_preexo.rst  tutorials.rst
doc/doxygen/: CMakeLists.txt  Doxyfile.in  index.doc
doc/readthedocs/: 4Csetup.rst  4Ctesting.rst  about.rst  analysisguide.rst  boundaryconditions.rst  codingguidelines.rst  contact.rst  coverage_report.rst  debugging_profiling.rst  developer_cluster.rst  developer_cmake.rst  developer_life_cycle.rst  developmentguide.rst  elementsthermo.rst  elementtypes.rst  functions.rst  geometrydefinition.rst  howto_document.rst  index.rst  installation.rst  introduction_solvers.rst  linear_solvers.rst  materialdevelopment.rst  materials.rst  postprocessing.rst  problemtypes.rst  referenceintroduction.rst  references.rst  struct_dynamics.rst  tut_fluid_preexo.rst  tut_fsi_preexo.rst  tut_fsi_preexo_2d.rst  tut_solid_preexo.rst  tutorial_contact_3d.md  tutorials.rst
doc/readthedocs-config/: conf.py.in
doc/removed_code/: major_changes.txt
doc_removed_code/: major_changes.txt
docker/: README.md
src/: CMakeLists.txt
tests/: list_of_tests.cmake
unittests/: 4C_gtest_main_mpi_test.cpp  CMakeLists.txt
utilities/: create_json_schema.py  metadata_utils.py  requirements.txt  set_up_dev_env.sh  tag_images_for_release.sh
(+5163 files in other folders)
